// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: lightMaterial shininess prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="color-pick"
  >
    <div
      className="item-header"
      title="material's diffuse color"
    >
      Diffuse Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="selectAssetNode-item"
  >
    <div
      className="item-header"
      title="material's diffuse map"
    >
      Diffuse Map
    </div>
    <div
      className="item-content"
    >
      <div
        className="img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
      </div>
      <button
        className="remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item wonder-float-input"
  >
    <div
      className="item-header component-label"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      title="material's shininess"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="12.12"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial shininess prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="color-pick"
  >
    <div
      className="item-header"
      title="material's diffuse color"
    >
      Diffuse Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="selectAssetNode-item"
  >
    <div
      className="item-header"
      title="material's diffuse map"
    >
      Diffuse Map
    </div>
    <div
      className="item-content"
    >
      <div
        className="img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
      </div>
      <button
        className="remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item wonder-float-input"
  >
    <div
      className="item-header component-label"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      title="material's shininess"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="12.12"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial shininess prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="color-pick"
  >
    <div
      className="item-header"
      title="material's diffuse color"
    >
      Diffuse Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="selectAssetNode-item"
  >
    <div
      className="item-header"
      title="material's diffuse map"
    >
      Diffuse Map
    </div>
    <div
      className="item-content"
    >
      <div
        className="img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
      </div>
      <button
        className="remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item wonder-float-input"
  >
    <div
      className="item-header component-label"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      title="material's shininess"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="12.12"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial shininess prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="color-pick"
  >
    <div
      className="item-header"
      title="material's diffuse color"
    >
      Diffuse Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="selectAssetNode-item"
  >
    <div
      className="item-header"
      title="material's diffuse map"
    >
      Diffuse Map
    </div>
    <div
      className="item-content"
    >
      <div
        className="img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
      </div>
      <button
        className="remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item wonder-float-input"
  >
    <div
      className="item-header component-label"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      title="material's shininess"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="12.12"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial shininess prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="color-pick"
  >
    <div
      className="item-header"
      title="material's diffuse color"
    >
      Diffuse Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="selectAssetNode-item"
  >
    <div
      className="item-header"
      title="material's diffuse map"
    >
      Diffuse Map
    </div>
    <div
      className="item-content"
    >
      <div
        className="img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
      </div>
      <button
        className="remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item wonder-float-input"
  >
    <div
      className="item-header component-label"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      title="material's shininess"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1.1"
      />
    </div>
  </article>
</article>
`;
